tests/NormalTests/paczka1/small_fuzzy/37524501.err
Error in line 1: vgNZoPkRaF A304 36,1
Error in line 9: jXBcQyS9 A193 89,69
Error in line 15: A30& A193 &3,3
